; ModuleID = '/home/carl/AnghaBench/linux/net/batman-adv/extr_bat_v_ogm.c_batadv_v_ogm_iface_enable.c'
source_filename = "/home/carl/AnghaBench/linux/net/batman-adv/extr_bat_v_ogm.c_batadv_v_ogm_iface_enable.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.batadv_hard_iface = type { i32 }
%struct.batadv_priv = type { i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @batadv_v_ogm_iface_enable(%struct.batadv_hard_iface* %0) #0 {
  %2 = alloca %struct.batadv_hard_iface*, align 8
  %3 = alloca %struct.batadv_priv*, align 8
  store %struct.batadv_hard_iface* %0, %struct.batadv_hard_iface** %2, align 8
  %4 = load %struct.batadv_hard_iface*, %struct.batadv_hard_iface** %2, align 8
  %5 = getelementptr inbounds %struct.batadv_hard_iface, %struct.batadv_hard_iface* %4, i32 0, i32 0
  %6 = load i32, i32* %5, align 4
  %7 = call %struct.batadv_priv* @netdev_priv(i32 %6)
  store %struct.batadv_priv* %7, %struct.batadv_priv** %3, align 8
  %8 = load %struct.batadv_hard_iface*, %struct.batadv_hard_iface** %2, align 8
  %9 = call i32 @batadv_v_ogm_start_queue_timer(%struct.batadv_hard_iface* %8)
  %10 = load %struct.batadv_priv*, %struct.batadv_priv** %3, align 8
  %11 = call i32 @batadv_v_ogm_start_timer(%struct.batadv_priv* %10)
  ret i32 0
}

declare dso_local %struct.batadv_priv* @netdev_priv(i32) #1

declare dso_local i32 @batadv_v_ogm_start_queue_timer(%struct.batadv_hard_iface*) #1

declare dso_local i32 @batadv_v_ogm_start_timer(%struct.batadv_priv*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
